# dynamic-serde-cpp

./: CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: cmake.yml  linux.yml
adapters/: CMakeLists.txt
adapters/json/: CMakeLists.txt
adapters/json/include/kingw/: json_deserializer.hpp  json_serializer.hpp  serde_json.hpp
adapters/json/src/kingw/: json_deserializer.cpp  json_serializer.cpp
adapters/ostream/: CMakeLists.txt
adapters/ostream/include/kingw/: ostream_serializer.hpp
adapters/ostream/src/kingw/: ostream_serializer.cpp
adapters/sprintf/: CMakeLists.txt
adapters/sprintf/include/kingw/: serde_sprintf.hpp  sprintf_deserializer.hpp  sprintf_serializer.hpp
adapters/sprintf/src/kingw/: sprintf_deserializer.cpp  sprintf_serializer.cpp
adapters/xml/: CMakeLists.txt
adapters/xml/include/kingw/: serde_xml.hpp  xml_serializer.hpp
adapters/xml/src/kingw/: xml_serializer.cpp
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example1.cpp
examples/generated1/: CMakeLists.txt
examples/generated1/include/: structs1.hpp
examples/generated1/src/: structs1.cpp
examples/generated2/: CMakeLists.txt
examples/generated2/include/: structs2.hpp
examples/generated2/src/: structs2.cpp
examples/multiple-libs/: CMakeLists.txt
examples/multiple-libs/exe1/: CMakeLists.txt  main.cpp
examples/multiple-libs/lib1/: CMakeLists.txt
examples/multiple-libs/lib1/include/: structs1.hpp
examples/multiple-libs/lib1/src/: structs1.cpp
examples/multiple-libs/lib2/: CMakeLists.txt
examples/multiple-libs/lib2/src/: structs2.cpp
examples/timestamp/: CMakeLists.txt  README.md  main.cpp  timestamp.cpp  timestamp.hpp
include/kingw/de/: accessor.hpp  derive.hpp  deserialize.hpp  deserializer.hpp  integral_visitors.hpp
include/kingw/de/templates/: stdmap.hpp  stdvector.hpp
include/kingw/ser/: accessor.hpp  derive.hpp  serialize.hpp  serializer.hpp
include/kingw/ser/templates/: stdmap.hpp  stdvector.hpp
include/kingw/serde/: accessor.hpp  derive.hpp  derive_common.hpp  deserialize.hpp  dynamic.hpp  serialize.hpp  string_view.hpp  type_traits.hpp
include/kingw/serde/templates/: stdmap.hpp  stdvector.hpp
src/kingw/de/: deserializer.cpp
src/kingw/ser/: serializer.cpp
src/kingw/serde/: deserialize.cpp  serialize.cpp
test/: CMakeLists.txt
test/include/kingw/mock/de/: mock_deserialize.hpp  mock_deserializer.hpp
test/include/kingw/mock/ser/: mock_serialize.hpp  mock_serializer.hpp
test/unit/kingw/de/: test_de_templates.cpp  test_deserialize.cpp  test_integral_visitors.cpp
test/unit/kingw/ser/: test_ser_templates.cpp  test_serialize.cpp
test/unit/kingw/serde/: test_derive.cpp
